# site_jks

./: .env  add_content_password_tables.py  add_created_at_to_vote.py  add_image_to_post.py  add_is_admin_to_user.py  add_property_fields.py  add_publication_status_to_post.py  app.py  backup_database.py  check_and_fix_columns.py  create_security_tables.py  fix_database_migration.py  fix_password_changed_at.py  make_admin.py  pyproject.toml  requirements.txt  reset_database.py  telegram_config.py  test_notifications_simple.py  test_telegram_bot.py  update_database.py  update_existing_users.py
admin/: __init__.py  routes.py
auth/: __init__.py  routes.py
blog/: __init__.py  routes.py
config/: __init__.py
docs/: 2FA_DISABLE_FIX.md  BLOG_BLUR_SYSTEM.md  CONTENT_PASSWORD_SYSTEM.md  DATABASE_SCRIPTS.md  MESSAGES_SYSTEM.md  NOTIFICATIONS_SYSTEM.md  NOTIFICATION_DEBUG.md  NOTIFICATION_FIX_SUMMARY.md  NOTIFICATION_HIGHLIGHTING.md  PROJECT_SUMMARY.md  PROPERTY_FIELDS_UPDATE.md  QUICK_SETUP.md  README.md  SECURITY.md  TELEGRAM_BOT_SETUP.md
forum/: __init__.py  routes.py
instance/: app.db
model/: db_models.py
scripts/: add_parent_id_to_forum_post.py
security/: __init__.py  routes.py
static/js/: messages_notifications.js
telegram_bot/: __init__.py  routes.py
templates/: base_notifications.html  index.html  profile.html  test_notifications.html
templates/auth/: login.html  register.html
templates/blog/: create.html  edit.html  index.html  my_posts.html  password_required.html  post.html  (+2 more)
utils/: content_password.py
voting/: __init__.py  routes.py
(+39 files in other folders)
